--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   google_sign_in: ^6.1.5
+  carousel_slider: ^4.2.1
+  salomon_bottom_bar: ^3.3.2
 
 dev_dependencies:
   flutter_test:
