chat suppot added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.1.5
   carousel_slider: ^4.2.1
   salomon_bottom_bar: ^3.3.2
+  cloud_firestore: ^4.12.1
 
 dev_dependencies:
   flutter_test:
