--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   google_maps_webservice: ^0.0.20-nullsafety.5
   location: ^5.0.3
   http: ^0.13.6
+  badges: ^3.1.2
+  firebase_storage: ^11.5.2
+  image_picker: ^1.0.4
+  firebase_messaging: ^14.7.5
+  flutter_local_notifications: ^16.2.0
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
